--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/students_routes.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/students_routes.html.twig
@@ -53,6 +53,7 @@
                     <div style="float: left; width: 300px;">{%trans%}label.student.name{%endtrans%}</div>
                     <div style="float: left; width: 60px;">{%trans%}label.section{%endtrans%}</div>
                     <div style="float: left; width: 250px;">{%trans%}label.route{%endtrans%}</div>
+                    <div style="float: left; width: 250px;">{%trans%}label.route2{%endtrans%}</div>
 
                     <div class="clear"></div>
                 </div>
@@ -63,6 +64,7 @@
                         <div style="float: left; width: 300px;">{{ student }}</div>
                         <div style="float: left; width: 60px;">&nbsp{{ student.groupyear }}</div>
                         <div style="float: left; width: 250px;">&nbsp{{ student.route }}</div>
+                        <div style="float: left; width: 250px;">&nbsp{{ student.routeIn }}</div>
 
                     </div>
                     <div class="clear"></div>
