--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -106,6 +106,7 @@
                             <li><a href="{{ path('_expediente_report_course_by_group') }}">{% trans %}label.report.grades.by.group.course{% endtrans %}</a></li>
                             <li><a href="{{ path('_expediente_report_students_by_route_club_level') }}">{% trans %}label.students.by.route.club.level{% endtrans %}</a></li>
                             <li><a href="{{ path('_expediente_report_students_by_route_club_route') }}">{% trans %}label.students.by.route.club.route{% endtrans %}</a></li>
+                            <li><a href="{{ path('_expediente_report_period_observations_by_group') }}">{% trans %}menu.observations.report{% endtrans %}</a></li>
                         </ul>
                     </li>
                     <li class="divider"></li>
