--- a/web/demo/stylesheets/app.css
+++ b/web/demo/stylesheets/app.css
@@ -5485,3 +5485,10 @@ form span.postfix {
 .courseTable tr   { page-break-inside:avoid; page-break-after:auto }
 .courseTable thead { display:table-header-group }
 .courseTable tfoot { display:table-footer-group }
+
+.form-type-9{width: 100%; color: #000;}
+.form-type-9 th{text-align: center; vertical-align: middle;}
+.form-type-9 th:first-child{text-align: left;}
+.form-type-9 tr{text-align: center; vertical-align: middle; line-height: 30px; height:30px;}
+.form-type-9 tr td{color: #000;}
+.form-type-9 tr td:first-child{text-align: left; padding-left: 5px;}
