Incluyendo formularios para el kinder

--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -138,6 +138,12 @@
                     <li class="divider"></li>
                     <li {% if menuIndex is defined and menuIndex == 3%}class="current"{% endif %}><a href="{{ path('_expediente_teacher_observations') }}">{% trans %}label.usuarios.observations{% endtrans %}</a></li>
                     <li class="divider"></li>
+                    <li {% if menuIndex is defined and menuIndex == 4%}class="current"{% endif %}>
+                        <a href="{{ path('_expediente_teacher_special_qualifications') }}">
+                            {% trans %}label.usuarios.special.qualifications{% endtrans %}
+                        </a>
+                    </li>
+                    <li class="divider"></li>
                 </ul>
                 {% else %}
                 <ul class="left">
