Generar notas especiales

--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="{{ asset(style ~ '/stylesheets/style.css') }}" type="text/css" media="all"/>
     <link rel="stylesheet" href="{{ asset(style ~ '/stylesheets/normalize.css') }}" type="text/css" media="all"/>
     <link rel="stylesheet" href="{{ asset(style ~ '/stylesheets/app.css') }}" type="text/css" media="all"/>
-
+    <link rel="stylesheet" href="{{ asset('css/shared.css') }}" type="text/css" media="all"/>
     <link rel="stylesheet" href="{{ asset('css/grid.css') }}" type="text/css" media="all"/>
     {% block extracss %}
     {% endblock %}
