--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Student/psicoProfile.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Student/psicoProfile.html.twig
@@ -39,8 +39,8 @@
 <div class="container_24" style="width: 900px;">
     <div class="grid_24" style="width: 100%;">
         <div class="titleRow">
-            <div class="left"><h3>{% trans %}label.student.show{% endtrans %}</h3></div>
-            <div class="right"><a href="{{ path('_expediente_sysadmin_student') }}" class="button success-darker tiny"><span></span>{% trans %}label.back.list{% endtrans %}</a></div>
+            <div class="left"><h3> {{ entity }}</h3></div>
+            <div class="right"><a href="{{ path('_expediente_sysadmin_student_psico_esc') }}" class="button success-darker tiny"><span></span>{% trans %}label.back.list{% endtrans %}</a></div>
             <div class="clear"></div>
         </div>
         <!-- -->
