--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -82,6 +82,7 @@
                             <li><a style="text-align: left;" href="{{ path('_expediente_penalties') }}">{% trans %}label.penalties{% endtrans %}</a></li>
                             <li><a style="text-align: left;" href="{{ path('_expediente_tickets') }}">{% trans %}label.tickets{% endtrans %}</a></li>
                             <li><a style="text-align: left;" href="{{ path('_expediente_sysadmin_convocatorias') }}">{% trans %}label.enter.convocatorias{% endtrans %}</a></li>
+<li><a href="{{ path('_expediente_sysadmin_student_psico_esc') }}">{% trans %}label.psicologiaescuela{% endtrans %}</a></li>
                         </ul>
                     </li>
                     <li class="divider"></li>
