--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/clubs.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/clubs.html.twig
@@ -173,7 +173,7 @@ tiny" id="btnPrint" name="btnPrint" rel="Listado de Estudiantes"><span></span>{%
                                         </div>
                                         <div style="float: left; width: 50px;">{{ student.groupyear }}</div>
                                         {% if age != null %}
-                                            <div style="float: left; width: 100px;">{{ student.age }}</div>
+                                            <div style="float: left; width: 100px;">{{ student.birthday }}</div>
                                         {% endif %}
                                         {% if gender != null %}
                                             <div style="float: left; width: 150px;">{% if student.gender == 1%}{% trans %}label.male{%
