--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -108,6 +108,10 @@
                             <li><a href="{{ path('_expediente_report_students_by_route_club_level') }}">{% trans %}label.students.by.route.club.level{% endtrans %}</a></li>
                             <li><a href="{{ path('_expediente_report_students_by_route_club_route') }}">{% trans %}label.students.by.route.club.route{% endtrans %}</a></li>
                             <li><a href="{{ path('_expediente_report_period_observations_by_group') }}">{% trans %}menu.observations.report{% endtrans %}</a></li>
+                            <li><a href="{{ path('_expediente_report_students_emergency') }}">{% trans %}label.students.emergency{% endtrans %}</a></li>
+                            <li><a href="{{ path('_expediente_report_students_by_route_filter2') }}">{% trans %}label.students.by.route{% endtrans %} Colegio</a></li>
+                            <li><a href="{{ path('_expediente_report_absences_by_route_filter2') }}">{% trans %}label.students.absences.by.route{% endtrans %} Colegio</a></li>
+                            <li><a href="{{ path('_expediente_report_daily_by_route_filter2') }}">{% trans %}label.students.daily.by.route{% endtrans %} Colegio</a></li>
                         </ul>
                     </li>
                     <li class="divider"></li>
