--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/studentsEmergency.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/studentsEmergency.html.twig
@@ -44,9 +44,11 @@
                     <input type="checkbox" class="check" id="fatherPhone" name="fatherPhone" {% if fatherPhone != null %}checked="checked"{% endif %}>{%trans%}label.fatherPhone{%endtrans%}
                     <input type="checkbox" class="check" id="motherPhone" name="motherPhone" {% if motherPhone != null %}checked="checked"{% endif %}>{%trans%}label.motherPhone{%endtrans%}
                     <input type="checkbox" class="check" id="address" name="address" {% if address != null %}checked="checked"{% endif %}>{%trans%}label.address{%endtrans%}
-                    <input type="checkbox" class="check" id="identification" name="identification" {% if identification != null %}checked="checked"{% endif %}>{%trans%}label.identification{%endtrans%}
-                    <input type="checkbox" class="check" id="birthday" name="birthday" {% if birthday != null %}checked="checked"{% endif %}>{%trans%}label.birthday{%endtrans%}
-                    <input type="checkbox" class="check" id="laterality" name="laterality" {% if laterality != null %}checked="checked"{% endif %}>{%trans%}label.laterality{%endtrans%}
+                    <input type="checkbox" class="check" id="emergencyout" name="emergencyout" {% if emergencyout != null %}checked="checked"{% endif %}>{%trans%}label.emergencyout{%endtrans%}
+                    <input type="checkbox" class="check" id="emergencyoutinst" name="emergencyoutinst" {% if emergencyoutinst != null %}checked="checked"{% endif %}>{%trans%}label.emergencyoutinst{%endtrans%}
+                    <input type="checkbox" class="check" id="brethren" name="brethren" {% if brethren != null %}checked="checked"{% endif %}>{%trans%}label.brethren{%endtrans%}
+                    <input type="checkbox" class="check" id="familiars" name="familiars" {% if familiars != null %}checked="checked"{% endif %}>{%trans%}label.familiars{%endtrans%}
+                    <input type="checkbox" class="check" id="emergencyinfo" name="emergencyinfo" {% if emergencyinfo != null %}checked="checked"{% endif %}>{%trans%}label.emergencyinfo{%endtrans%}
                 </div>
                 <hr>
                 <div>
@@ -94,7 +96,7 @@
             <div class="clear"></div>
         </div>
 
-        <div id="report" style="margin-top: 25px; width: 950px;">
+        <div id="report" style="margin-top: 25px; width: 1050px;">
 
             <!-- special  -->
                             {% for group in groups %}
@@ -115,22 +117,37 @@
                                     </div>
                                     <table style="border-width: 1px; border-style: solid;">
                                         <tr>
-                                            <td style="float: left;  width: 75px; height: 22px;"><span style="font-family:arial;font-size:18px;">{%trans%}label.carne{%endtrans%}</span></td>
-                                            <td style="float: left; width: 450px; height: 22px;"><span style="font-family:arial;font-size:18px;">{%trans%}label.student.name{%endtrans%}</span></td>
+                                            <td style="float: left;  width: 50px; height: 22px;"><span style="font-family:arial;font-size:14px;">{%trans%}label.carne{%endtrans%}</span></td>
+                                            <td style="float: left; width: 275px; height: 22px;"><span style="font-family:arial;font-size:14px;">{%trans%}label.student.name{%endtrans%}</span></td>
                                             {% if fatherPhone != null %}
-                                                <td style="float: left; width: 100px;">{%trans%}label.fatherPhone{%endtrans%}</td>
+                                                <td style="float: left; width: 450px;"><span style="font-family:arial;font-size:14px;">{%trans%}label.fatherPhone{%endtrans%}</span></td>
                                             {% endif %}
                                             {% if motherPhone != null %}
-                                                <td style="float: left; width: 100px;">{%trans%}label.motherPhone{%endtrans%}</td>
+                                                <td style="float: left; width: 100px;"><span style="font-family:arial;font-size:14px;">{%trans%}label.motherPhone{%endtrans%}</span></td>
                                             {% endif %}
                                             {% if birthday != null %}
-                                                <td style="float: left; width: 100px;">{%trans%}label.birthday{%endtrans%}</td>
+                                                <td style="float: left; width: 100px;"><span style="font-family:arial;font-size:14px;">{%trans%}label.birthday{%endtrans%}</span></td>
                                             {% endif %}
                                             {% if identification != null %}
-                                                <td style="float: left; width: 100px;">{%trans%}label.identification{%endtrans%}</td>
+                                                <td style="float: left; width: 100px;"><span style="font-family:arial;font-size:14px;">{%trans%}label.identification{%endtrans%}</span></td>
                                             {% endif %}
                                             {% if address != null %}
-                                                <td style="float: left; width: {{ widthAdress }}px;">{%trans%}label.address{%endtrans%}</td>
+                                                <td style="float: left; width: {{ widthAdress }}px;"><span style="font-family:arial;font-size:14px;">{%trans%}label.address{%endtrans%}</span></td>
+                                            {% endif %}
+{% if emergencyout != null %}
+                                                <td style="float: left; width: 50px;"><span style="font-family:arial;font-size:14px;">{%trans%}label.emergencyout{%endtrans%}</span></td>
+                                            {% endif %}
+{% if emergencyoutinst != null %}
+                                                <td style="float: left; width: 50px;"><span style="font-family:arial;font-size:14px;">Salida:</span></td>
+                                            {% endif %}
+{% if brethren != null %}
+                                                <td style="float: left; width: 50px;"><span style="font-family:arial;font-size:14px;">{%trans%}label.brethren{%endtrans%}</span></td>
+                                            {% endif %}
+{% if familiars != null %}
+                                                <td style="float: left; width: 275px;"><span style="font-family:arial;font-size:14px;">{%trans%}label.familiars{%endtrans%}</span></td>
+                                            {% endif %}
+{% if emergencyinfo != null %}
+                                                <td style="float: left; width: 150px;"><span style="font-family:arial;font-size:14px;">{%trans%}label.emergencyinfo{%endtrans%}</span></td>
                                             {% endif %}
                                         </tr>
 
@@ -138,16 +155,16 @@
                                         {% set counterM = 0 %}
                                         {% for student in group.students %}
                                             <tr>
-                                                <td style="float: left; width: 75px;  height: 16px;"><span style="font-family:arial;font-size:16px;">{{ student.carne }}</span></td>
-                                                <td style="float: left; width: 300px;  height: 16px;"><span style="font-family:arial;font-size:16px;">{{ student.lastname ~ ", " ~ student.firstname }}</span></td>
+                                                <td style="float: left; width: 50px;  height: 16px;"><span style="font-family:arial;font-size:12px;">{{ student.carne }}</span></td>
+                                                <td style="float: left; width: 275px;  height: 16px;"><span style="font-family:arial;font-size:12px;">{{ student.lastname ~ ", " ~ student.firstname }}</span></td>
                                                 {% if fatherPhone != null %}
-                                                    <td style="float: left; width: 300px;"> &nbsp
+                                                    <td style="float: left; width: 250px;  height: 16px;"><span style="font-family:arial;font-size:10px;"> &nbsp
                                                     {% for relative in student.relatives %}
                                                    {{ relative.contact.firstname }} &nbsp ({{ relative.contact.phonec }}) &nbsp </br>
                                                     {% endfor %}
                                                     </td>
-                                                    <td style="float: left; width: 100px;"> &nbsp {{ student.fatherPhone }}</td>
-                                                    <td style="float: left; width: 100px;"> &nbsp {{ student.motherPhone }}</td>
+                                                    <td style="float: left; width: 100px;"> <span style="font-family:arial;font-size:11px;">&nbsp {{ student.fatherPhone }}</span></td>
+                                                    <td style="float: left; width: 100px;"> <span style="font-family:arial;font-size:11px;">&nbsp {{ student.motherPhone }}</span></td>
                                                 {% endif %}
                                                 {% if birthday != null %}
                                                     <td style="float: left; width: 100px;"> &nbsp {{ student.birthday }}</td>
@@ -157,6 +174,23 @@
                                                 {% endif %}
                                                 {% if address != null %}
                                                     <td style="float: left; width: {{ widthAdress }}px;">  {{ student.address }} &nbsp </td>
+                                                {% endif %}
+{% if emergencyout != null %}
+                                                    <td style="float: left; width: 50px;"> &nbsp {% if student.emergencyout == 1%}{% trans %}Si{% endtrans %}{% else %}{% trans %}No{% endtrans %}{% endif %}</td>
+                                                {% endif %}
+{% if emergencyoutinst != null %}
+                                                    <td style="float: left; width: 60px;"> &nbsp {% if student.emergencyoutinst == 1%}{% trans %}Kinder{% endtrans %}{% endif %}
+{% if student.emergencyoutinst == 2%}{% trans %}Escuela{% endtrans %}{% endif %}
+{% if student.emergencyoutinst == 3%}{% trans %}Colegio{% endtrans %}{% endif %}</td>
+                                                {% endif %}
+{% if brethren != null %}
+                                                    <td style="float: left; width: 50px;"> &nbsp {% if student.brethren == 1%}{% trans %}Si{% endtrans %}{% else %}{% trans %}No{% endtrans %}{% endif %}</td>
+                                                {% endif %}
+{% if familiars != null %}
+                                                    <td style="float: left; width: 275px;"><span style="font-family:arial;font-size:12px;"> &nbsp {{ student.familiars }}</span></td>
+                                                {% endif %}
+{% if emergencyinfo != null %}
+                                                    <td style="float: left; width: 150px;"><span style="font-family:arial;font-size:12px;"> &nbsp {{ student.emergencyinfo }}</span></td>
                                                 {% endif %}
                                             </tr>
 
