--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/students_by_route.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/students_by_route.html.twig
@@ -35,7 +35,7 @@ tiny" id="btnPrint" name="btnPrint" rel="Rutas por Zona"><span></span>{% trans %
                 </div>
             </div>
 
-            <div id="report" style="margin-top: 25px;">
+            <div id="report" style="margin-top: 25px; width: 950px;">
 
                 <div class="titles" style="font-size: 10px;">
                     <div class="left">{{corpo_name}}</div>
@@ -83,6 +83,7 @@ tiny" id="btnPrint" name="btnPrint" rel="Rutas por Zona"><span></span>{% trans %
                         <div class="student_footer">
                             Total de estudiantes por ruta: {{ route.students|length}}
                         </div>
+<div class="pageBreak"> </div>
                     </div>
                 {% else %}
                     <div class="row userRow {% if loop.index%2 == 0 %}tableRowOdd{%else%}tableRow{% endif %}">
