--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Ticket/show.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Ticket/show.html.twig
@@ -41,6 +41,8 @@
 
                 <div class="center" style="float: left; width: 900px; font-size: 16px;">{% trans %}label.ticket2 {% endtrans %} {{ ticket.relative.contact }}</div>
                 </br></br>
+                <div class="center" style="float: left; width: 320px; font-size: 14px;">{{ ticket.comments }}</div>
+                </br></br>
 
                 </br></br></br></br>
                 <div class="center" style="float: left; width: 300px; font-size: 14px;">{% trans %}label.ticket5a {% endtrans %}</div>
@@ -100,13 +102,15 @@
 
                     <div class="center" style="float: left; width: 900px; font-size: 16px;">{% trans %}label.ticket2 {% endtrans %} {{ ticket.relative.contact }}</div>
                     </br></br>
-
+                    <div class="center" style="float: left; width: 320px; font-size: 14px;">{{ ticket.comments }}</div>
+                    </br></br>
                     </br></br></br></br>
                     <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket5a {% endtrans %}</div>
                     <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket5a {% endtrans %}</div>
                     </br></br>
                     <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket5 {% endtrans %} {{ corpo_name }}</div>
                     <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket6 {% endtrans %}</div>
+
                     </br></br></br></br></br></br></br></br></br></br>
                     <div class="center" style="float: left; width: 860px; font-size: 14px;">{{ text }}</div>
                     </br></br>
