Psico forms by group

--- a/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/observations.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/observations.html.twig
@@ -17,6 +17,7 @@
         Tecnotek.UI.urls["loadCoursesOfGroupByTeacherURL"] = "{{ path("_expediente_teacher_load_courses_of_group_by_teacher") }}";
         Tecnotek.UI.urls["loadObservationsOfGroupURL"] = "{{ path("_expediente_teacher_load_group_observations") }}";
         Tecnotek.UI.urls["saveStudentObservationURL"] = "{{ path("_expediente_teacher_save_student_observation") }}";
+        Tecnotek.UI.urls["studentPsicosURL"] = "{{ path("_expediente_teacher_students_psico_basic") }}";
 
         Tecnotek.UI.urls["viewPrintableVersionURL"] = "{{ path("_expediente_sysadmin_printable_group_qualifications") }}";
     </script>
@@ -58,7 +59,7 @@
         #contentBody {width: auto; overflow-x:scroll; margin-left:369px; }
         .headcolcarne { height: 30px; border: 1px solid black; position:absolute; left:0; line-height: 30px; }
         .headcolnombre { height: 30px; border: 1px solid black; position:absolute; left:75px; line-height: 30px; }
-        .headcoltrim { height: 30px;  border: 1px solid black; position:absolute; left:325px; line-height: 30px; }
+        .headcoltrim { height: 30px;  border: 1px solid black; position:absolute; left:350px; line-height: 30px; }
     </style>
 
     <style type="text/css">
